clang/test/BSC/Negative/OwnedStruct/access/owned-struct-static-member-function-error-case.cbs
// RUN: %clang_cc1 -verify %s


owned struct A {
    int a;
    int f() { 
     a;// expected-error {{invalid implicit use of member 'a' in struct member function}}
     return a; // expected-error {{invalid implicit use of member 'a' in struct member function}}
    } 
};

owned struct B {
    static int a;
    int f() { return a; } // expected-error {{invalid implicit use of member 'a' in struct member function}}
};

owned struct C {
    int a;
    int f(C* this) { return a; } // expected-error {{invalid implicit use of member 'a' in struct member function}}
};

owned struct D {
    static int a;
    int f(D* this) { return a; } // expected-error {{invalid implicit use of member 'a' in struct member function}}
};

owned struct E {
    int f(E* this) { return 0; } 
    int f1(E* this) { return f(this); } // expected-error {{use of undeclared identifier 'f'}}
};

owned struct F {
    int f(F* this);
    int f1(F* this); 
};

int F::f(F* this) {
    return 0;
}

int F::f1(F* this) {
    return f(this); // expected-error {{use of undeclared identifier 'f'}}
}
